# Human-in-the-loop-fraud-detection-with-auto-retraining-drift-detection-SHAP-monitoring-deployment

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  dataaset.ipynb  requirements.txt
Dockerfiles/: Dockerfile.pipeline  (+1 more)
services/api/: .dockerignore  Dockerfile  pyproject.toml
services/api/api_payload_test/: batch_payload.ipynb  single_payload.ipynb
services/api/app/: main.py  sns_publish.py
services/api/app/routes/: prediction_endpoints.py
services/api/app/schemas/: batch_prediction.py  real_time_prediction.py
services/api/app/utils/: logger.py
services/api/load_test_locust/: locustfile.py
services/api/locust/: locustfile.py
services/api/tests/: conftest.py
services/api/tests/integration/: test_main.py  test_prediction_endpoints.py
services/api/tests/unit/: test_schemas.py  test_sns_publish.py
services/pipeline/: .dockerignore  Dockerfile  pyproject.toml
services/pipeline/mlops_pipeline/: __main__.py  exceptions.py  settings.py
services/pipeline/mlops_pipeline/configs/: preprocessing_config.py  s3_storage_config.py  transformation_config.py  wandb_config.py
services/pipeline/mlops_pipeline/protocols/: model_versioning_protocol.py  storage_protocol.py
services/pipeline/mlops_pipeline/repositories/: s3_storage.py  wandb_repository.py
services/pipeline/mlops_pipeline/schemas/: data.py  hyperparameter_tuning.py
services/pipeline/mlops_pipeline/src/: data_ingestion.py  data_preprocessing.py  data_transformation.py  lightgbm_strategy.py  master_tuner.py  model_evaluation.py  model_promotion.py  model_trainer.py  pipeline.py  types.py  xgboost_strategy.py
services/pipeline/tests/: conftest.py  test_data_ingestion.py  test_data_preprocessing.py  test_data_transformation.py  test_lightgbm_strategy.py  test_master_tuner.py  test_model_trainer.py  test_xgboost_strategy.py
(+18 files in other folders)
