[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.67",
    "fastapi>=0.135.1",
    "httpx>=0.27.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "pandas>=3.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
    "wandb>=0.25.1",
    "xgboost>=3.2.0",
]
