[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.65",
    "dotenv>=0.9.9",
    "lightgbm>=4.6.0",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "wandb>=0.25.1",
    "xgboost>=3.2.0",
]

